# ViV1T-closed-loop

./: .gitignore  CITATION.bib  LICENSE  README.md  ensemble.py  limit_data.py  predict.py  pyproject.toml  ray_sweep.py  train.py  wandb_sweep.py
data/: README.md  compute_metadata.py  download_GIN.py  save_response.py
docker/: Dockerfile  README.md  compute_pod.yaml  cpu_pod.yaml  interactive.yaml  pvc.yaml  ray-head.yaml  ray-worker.yaml  wandb_sweep.yaml
figures/: .gitignore
in_vivo_analysis/: .gitignore  README.md  check_cross_session_reliability.py
misc/: .gitignore  README.md  assign_stimulus_ids.py  assign_video_ids.py  calculate_model_parameters.py  evaluate_response.py  extract_attention.py  extract_flashing_images.py  neurip2023.ipynb  performance_by_depth.py  print_performance_table.py  visualize_artificial_stimuli.py  visualize_attention.py  visualize_attention_2.py  visualize_average_attention.py  visualize_calcium_trace.py  visualize_core_output.py  visualize_limit_data.py  visualize_limit_data_and_neurons.py  visualize_model_stats.py  visualize_response_3D.ipynb  visualize_sample.ipynb  visualize_sensorium_dataset.ipynb  visualize_sensorium_response_statistics.ipynb  visualize_stimuli.py  visualize_tokenizer.ipynb
most_exciting_stimulus/: README.md  estimate_natural_stimuli_spectrum.py  estimate_neuron_reliability.py  predict_stimulus.py  visualize_grid_search.py  visualize_sensorium_power_spectrum.py
tuning_contextual_modulation/: README.md  estimate_contextual_modulation.py  predict_grating.py  predict_grating_population.py  visualize_contextual_modulation.py  visualize_contrast_difference.py  visualize_response.py  visualize_response_onset.py  visualize_stimuli.py
tuning_direction/: README.md  estimate_selectivity_indexes.py  (+15 more)
viv1t/utils/: plot.py  (+1 more)
(+506 files in other folders)
